fixed warnings